chore: auth and roles; WIP
